Changed page behavior when loading new playground data to remove previous playground's information. Need to fix image carousel for the thumbnails and format reviews to be more readable

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -207,6 +207,22 @@ footer p {
   border-color: var(--dark-moss-green);
 }
 
+.reviews {
+  padding: 1rem;
+  
+}
+
+.review-content {
+  list-style-type: none;
+  padding-left: 1rem;
+}
+
+/* .reviews li {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.5rem;
+  
+} */
+
 .playground-map {
   margin-top: 1rem;
 }
